main/monitoring/nginx_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: alibok/test-nginx-app:latest
          ports:
            - containerPort: 80
