main/monitoring/nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80          # порт внутри кластера
      targetPort: 80
