main/monitoring/atlantis_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: atlantis
spec:
  ingressClassName: ingress-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 4141
